log
Mon 06 May 2024 02:50:00 PM UTC: 
 tests:  1|8
total_score: 0/70
bcd712b
Mon 06 May 2024 03:14:02 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
50dbb65
Mon 06 May 2024 03:21:27 PM UTC: 
 treemap.c | 41 ++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 40 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
3067d96
Mon 06 May 2024 03:23:29 PM UTC: 
 treemap.c | 47 +++++++++--------------------------------------
 1 file changed, 9 insertions(+), 38 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:48:16: error: unused variable ‘new’ [-Werror=unused-variable]
   48 |     TreeNode * new = createTreeNode(key, value);
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
36670f6
Mon 06 May 2024 03:24:00 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:49:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   49 |     return NULL;
      |            ^~~~
treemap.c:47:6: note: declared here
   47 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
07e50b9
Mon 06 May 2024 03:37:14 PM UTC: 
 treemap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:48:16: error: unused variable ‘new’ [-Werror=unused-variable]
   48 |     TreeNode * new = createTreeNode(key, value);
      |                ^~~
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
577a831
Mon 06 May 2024 03:37:37 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:48:16: error: unused variable ‘new’ [-Werror=unused-variable]
   48 |     TreeNode * new = createTreeNode(key, value);
      |                ^~~
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
b0b2af7
Mon 06 May 2024 03:39:42 PM UTC: 
 treemap.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:48:16: error: unused variable ‘new’ [-Werror=unused-variable]
   48 |     TreeNode * new = createTreeNode(key, value);
      |                ^~~
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
c4cecad
Mon 06 May 2024 03:40:03 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
cdeeafa
